# noema

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_STACK.md  GOVERNANCE.md  LIVE_TRADING.md  MASTER_RESTRUCTURING_PLAN.md  README.md  REPORT_ARCHITECTURE.md  REPORT_MODERN_AGENTS.md  REPORT_QUALITY.md  REPORT_RESEARCH.md  REPORT_SECURITY.md  REPORT_TECH_STACK.md  RESEARCH_SWARM_RESULTS.md  __init__.py  docker-compose.override.yml  docker-compose.yml  main.py  noema-setup  pyproject.toml  setup.sh
.github/workflows/: ci.yml
agents/: __init__.py  cio.py  confluence.py  currency.py  devil.py  execution.py  fundamental.py  guardian.py  institutional.py  learning.py  macro.py  management.py  momentum.py  opportunity.py  orchestrator.py  performance.py  portfolio.py  price_action.py  reflector.py  risk.py  session.py  sr.py  structure.py  telegram_bot.py  thesis.py  trend.py
analysis/: __init__.py  candlestick.py  econometrics.py  fundamental.py  smc.py  technical.py
backtest/: __init__.py  engine.py  statistical.py  walkforward.py
broker/: __init__.py  base.py  fbs.py  mt5.py  paper.py
config/: AutoAttachEA.mq5  docker.env.example  grafana-datasources.yml  langfuse.env.example  noema-mt5-system.service  settings.yaml  symbols.yaml
core/: __init__.py  agent.py  config.py  message_bus.py  metrics.py  modern_agent.py  nim_client.py  orchestrator_modern.py  settings.py  state_machine.py  storage.py  types.py
dashboard/: README.md  package-lock.json  package.json  tsconfig.json
dashboard/server/: api.py  requirements.txt
dashboard/src/: index.css
dashboard/src/components/: Layout.tsx  Sidebar.tsx  StatusBadge.tsx  TradingChart.tsx
dashboard/src/contexts/: DashboardContext.tsx
dashboard/src/pages/: Agents.tsx  Dashboard.tsx  Settings.tsx
dashboard/src/types/: index.ts
data/: __init__.py  calendar.py  feed.py
database/: __init__.py  models.py
docs/: AGENTIC_ARCHITECTURE.md  ARCHITECTURE.md  CREDENTIAL_ROTATION.md  CURRICULUM_MAPPING.md  HERMES_ARCHITECTURE.md  PHASE1_DEPLOYMENT.md  ROADMAP.md  SECURITY.md  TECH_STACK_EVALUATION.md
indicators/: __init__.py  candlestick.py
models/: __init__.py  knowledge.py  schemas.py  trade.py
monitoring/: alerting_rules.yml
noema/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REPORT_QUALITY.md  cli.py  docker-compose.override.yml  main.py  noema-setup  pyproject.toml
noema/.github/workflows/: ci.yml  publish.yml
noema/agents/: __init__.py  bull_analyst.py  cio.py  currency.py  devil.py  event_analyst.py  fundamental.py  guardian.py  institutional.py  opportunity.py  order_router.py  price_action.py  sr.py  structure.py
noema/analysis/: smc.py
noema/api/: __init__.py
noema/backtest/: __init__.py  metrics.py
noema/broker/: __init__.py  connection.py  fix.py  gateway.py  mt5_linux.py
noema/config/: __init__.py  grafana-dashboards.yml  llm_models.yaml  mt5-config.ini.template  noema-mt5.service  noema.service  prometheus.yml
noema/config/grafana-dashboards/: README.md
noema/core/: __init__.py  conductor.py  conservative_tiebreaker.py  llm_structured.py  metrics_exporter.py  modern_agent.py  nim_client.py  orchestrator_modern.py  platform.py  settings.py  shutdown.py  symbol_orchestrator.py  timeframe_manager.py
noema/dashboard/: DASHBOARD_SECURITY.md  index.html  package-lock.json  tailwind.config.ts  tsconfig.tsbuildinfo
noema/dashboard/server/: __init__.py
noema/dashboard/src/: main.tsx
noema/data/: __init__.py  correlation.py  event_calendar.py  feed.py
noema/database/: journal.py
noema/decision/: __init__.py  debate_synthesis.py
noema/docs/: AGENTIC_ARCHITECTURE.md  ARCHITECTURE.md  CURRICULUM_MAPPING.md  HERMES_ARCHITECTURE.md  SECURITY.md  nvidia-nim-model-research-2026-06-23.md
noema/econometrics/: __init__.py  causal_inference.py  regression.py
noema/indicators/: __init__.py  macd.py
noema/learning/: __init__.py  performance.py  safeguards.py  weighting.py
noema/memory/: __init__.py  episodic.py
noema/models/: position.py
noema/noema/: cli.py  main.py  rust_bridge.py
noema/noema/agents/: __init__.py  cio.py  critic_manager.py  currency.py  devil.py  execution.py  guardian.py  institutional.py  learning.py  macro.py  momentum.py  price_action.py  risk.py  session.py  sr.py  structure.py  telegram_bot.py  thesis.py
noema/noema/analysis/: fundamental.py
noema/noema/api/: health.py
noema/noema/broker/: __init__.py  base.py  connection.py  gateway.py  lot_protection.py  mt5.py  mt5_linux.py  reconciliation.py
noema/noema/config/: settings.yaml
noema/noema/core/: __init__.py  backup.py  conductor.py  config_validator.py  conservative_tiebreaker.py  debate_engine.py  health.py  (+15 more)
noema/reference-repos/: REPO_KNOWLEDGE_BASE.md
noema/research/: REVIEWS.md  SWARM_OUTPUTS.md  TRADING_AGENTS_ANALYSIS.md
noema/risk/: compliance.py
noema/scripts/: mt5_daemon.py  run_tests.sh  start_mt5.py  watchdog.py
noema/skills/: composer.py  registry.py
noema/statistics/: distributions.py  estimation.py  hypothesis.py  monte_carlo.py  nonparametric.py  survival.py
noema/telegram/: __init__.py  formatters.py  handlers.py
noema/tests/: __init__.py  test_agents.py  test_analysis.py  test_fundamental_bias.py  test_guardian.py  test_portfolio.py  test_redis_integration.py  test_reflector.py
noema/tools/: __init__.py  broker_status.py  economic_calendar.py  market_data.py
research/: MULTI_AGENT_TRENDS_2026H1.md  REVIEWS.md  SWARM_OUTPUTS.md
reviews/: full-repo-audit-2026-06-23.md
rust/: Cargo.toml  README.md
rust/noema-backtest/: Cargo.toml
rust/noema-backtest/src/: engine.rs  events.rs  lib.rs  metrics.rs  position.rs
rust/noema-data/: Cargo.toml
rust/noema-data/src/: aggregation.rs  lib.rs
rust/noema-smc/: Cargo.toml
rust/noema-smc/src/: fvg.rs  lib.rs  order_block.rs  structure.rs  sweep.rs  swing.rs
scripts/: run_live.py  start_mt5.py  watchdog.py
tests/: conftest.py  test_agents.py  test_analysis.py  test_backtest.py  test_broker.py  test_core.py  test_data.py  test_journal.py  test_reflector.py
(+63 files in other folders)
