[project]
name = "vmpm"
version = "0.1.0"
description = "Valentine Money Printing Machine — multi-agent FX trading on MT5"
authors = [{ name = "Valentine", email = "ovalentine964@example.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"

dependencies = [
    # MT5 bridge (Linux via Wine). RPyC pinned >=6.0 per security review (RCE history in <5.3).
    "mt5linux>=1.0.3",
    "rpyc>=6.0",
    # Technical analysis (system libta-lib must be installed)
    "TA-Lib>=0.6.0",
    # Data / storage
    "polars>=1.10",
    "pyarrow>=17.0",
    "duckdb>=1.1",
    # Async
    "uvloop>=0.22; sys_platform != 'win32'",
    # Observability
    "structlog>=24.0",
    "prometheus-client>=0.21",
    "rich>=13.0",
    # Config + secrets
    "pydantic>=2.6",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # Econometrics / stats
    "numpy>=2.0",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "arch>=7.0",
    "scikit-learn>=1.5",
    # News / calendar
    "finnhub-python>=2.4",
    "httpx>=0.27",
    # LLM client (OpenAI-compatible for LiteLLM proxy)
    "openai>=1.40",
    # Control surface
    "python-telegram-bot>=21.0",
    # Misc
    "pyyaml>=6.0",
    "pendulum>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    # Security tooling — required by docs/SECURITY.md
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
]
# v2-only heavy deps. Quality + security delta reviews rejected these as v0.x
# core deps (LangGraph orchestration overhead, NautilusTrader LGPL pull).
# Installed only when v2.0 work begins: `uv sync --extra v2`.
v2 = [
    "langgraph>=0.4",
    "nautilus_trader>=1.200",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vmpm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
