[project]
name = "noema"
version = "0.1.0"
description = "Noema — multi-agent FX trading on MT5"
authors = [{ name = "Valentine", email = "ovalentine964@example.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"

dependencies = [
    # MT5 bridge (Linux via Wine). RPyC pinned >=6.0 per security review (RCE history in <5.3).
    # mt5linux pins rpyc==5.2.3 — accept it for v0.x; upgrade when mt5linux releases
    "mt5linux>=1.0.3",
    # Technical analysis (system libta-lib must be installed; optional at runtime)
    "TA-Lib>=0.6.0",
    # Data / storage
    "pandas>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",          # PostgreSQL async driver
    "aiosqlite>=0.20",       # SQLite fallback for dev/testing
    "redis>=5.0",            # Redis for caching + pub/sub
    # DuckDB for trade journal
    "duckdb>=1.0",
    # Observability
    "structlog>=24.0",
    "prometheus-client>=0.21",  # Prometheus metrics
    # Config + validation
    "pydantic>=2.6",
    # LLM client
    "httpx>=0.27",           # Async HTTP client for NIM API
    # Econometrics / stats
    "numpy>=2.0",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "arch>=7.0",
    "scikit-learn>=1.5",
    # Config
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    # Security tooling — required by docs/SECURITY.md
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
]
# v2-only heavy deps. Quality + security delta reviews rejected these as v0.x
# core deps (LangGraph orchestration overhead, NautilusTrader LGPL pull).
# Installed only when v2.0 work begins: `uv sync --extra v2`.
v2 = [
    "langgraph>=0.4",
    "nautilus_trader>=1.200",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Code lives at repo root, not in a noema/ package dir
# packages = ["noema"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
