[workspace]
resolver = "2"
members = [
    "noema-data",
    "noema-backtest",
    "noema-smc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Valentine <ovalentine964@example.com>"]
repository = "https://github.com/valentine/noema"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
arrow = { version = "54", features = ["pyarrow"] }
arrow-array = "54"
arrow-data = "54"
arrow-schema = "54"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
ndarray = "0.16"
polars = { version = "0.45", features = ["lazy", "temporal", "dtype-struct"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
parking_lot = "0.12"
anyhow = "1"
