[package]
name = "noema-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Market data ingestion, tick parsing, and OHLCV aggregation for Noema"
authors.workspace = true
repository.workspace = true

[lib]
name = "noema_data"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-data.workspace = true
arrow-schema.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
ndarray.workspace = true
polars.workspace = true
rayon.workspace = true
anyhow.workspace = true
# CSV / Parquet I/O for data pipelines
csv = "1.3"
parquet = { version = "54", features = ["arrow"] }

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module"]
pure-rust = []
