[package]
name = "noema-smc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SMC indicator computation — FVG, Order Blocks, sweeps — with PyO3 bindings"
authors.workspace = true
repository.workspace = true

[lib]
name = "noema_smc"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true
arrow.workspace = true
arrow-array.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
ndarray.workspace = true
polars.workspace = true
rayon.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
# Local crates
noema-data = { path = "../noema-data" }

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module"]
pure-rust = []
